@@ -2,6 +2,9 @@ $Id$
 
 2016-04-10  Christian Franke  <franke@computer.org>
 
+	os_win32.cpp: Include also unknown and unsupported USB devices
+	in device scan result.  Move USB device handling to new function.
+
 	AUTHORS: Add Thomas Gatterweh.
 	smartd.cpp: Check is_powered_down() also with '-n sleep'.
 
